--- a/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/package.json
@@ -1,79 +1,79 @@
 {
     "dependencies": {
-        "@angular/animations": "14.2.8", 
-        "@angular/cdk": "14.2.6", 
-        "@angular/common": "14.2.8", 
-        "@angular/core": "14.2.8", 
-        "@angular/flex-layout": "14.0.0-beta.41", 
-        "@angular/forms": "14.2.8", 
-        "@angular/material": "14.2.6", 
-        "@angular/platform-browser": "14.2.8", 
-        "@angular/platform-browser-dynamic": "14.2.8", 
-        "@angular/router": "14.2.8", 
-        "autolinker": "4.0.0", 
-        "openvidu-browser": "2.24.0", 
-        "rxjs": "7.5.7", 
-        "tslib": "2.3.1", 
+        "@angular/animations": "14.2.8",
+        "@angular/cdk": "14.2.6",
+        "@angular/common": "14.2.8",
+        "@angular/core": "14.2.8",
+        "@angular/flex-layout": "14.0.0-beta.41",
+        "@angular/forms": "14.2.8",
+        "@angular/material": "14.2.6",
+        "@angular/platform-browser": "14.2.8",
+        "@angular/platform-browser-dynamic": "14.2.8",
+        "@angular/router": "14.2.8",
+        "autolinker": "4.0.0",
+        "openvidu-browser": "2.24.0",
+        "rxjs": "7.5.7",
+        "tslib": "2.3.1",
         "zone.js": "0.11.4"
-    }, 
+    },
     "devDependencies": {
-        "@angular-devkit/build-angular": "14.2.7", 
-        "@angular/cli": "14.2.7", 
-        "@angular/compiler": "14.2.8", 
-        "@angular/compiler-cli": "14.2.8", 
-        "@angular/elements": "14.2.8", 
-        "@compodoc/compodoc": "^1.1.19", 
-        "@types/chai": "4.3.0", 
-        "@types/mocha": "9.1.0", 
-        "@types/node": "16.11.6", 
-        "@types/selenium-webdriver": "4.1.5", 
-        "chai": "4.3.6", 
-        "chromedriver": "106.0.1", 
-        "codelyzer": "6.0.2", 
-        "concat": "^1.0.3", 
-        "cross-env": "^7.0.3", 
-        "http-server": "14.1.1", 
-        "jasmine-core": "3.10.1", 
-        "jasmine-spec-reporter": "7.0.0", 
-        "karma": "^6.3.9", 
-        "karma-chrome-launcher": "3.1.1", 
-        "karma-coverage": "^2.0.3", 
-        "karma-coverage-istanbul-reporter": "3.0.3", 
-        "karma-jasmine": "4.0.1", 
-        "karma-jasmine-html-reporter": "1.7.0", 
-        "karma-junit-reporter": "2.0.1", 
-        "karma-mocha-reporter": "2.2.5", 
-        "karma-notify-reporter": "1.3.0", 
-        "mocha": "9.2.2", 
-        "ng-packagr": "14.2.2", 
-        "selenium-webdriver": "4.5.0", 
-        "ts-node": "10.4.0", 
-        "tslint": "6.1.3", 
-        "typescript": "4.8.4", 
+        "@angular-devkit/build-angular": "14.2.7",
+        "@angular/cli": "14.2.7",
+        "@angular/compiler": "14.2.8",
+        "@angular/compiler-cli": "14.2.8",
+        "@angular/elements": "14.2.8",
+        "@compodoc/compodoc": "^1.1.19",
+        "@types/chai": "4.3.0",
+        "@types/mocha": "9.1.0",
+        "@types/node": "16.11.6",
+        "@types/selenium-webdriver": "4.1.5",
+        "chai": "4.3.6",
+        "chromedriver": "106.0.1",
+        "codelyzer": "6.0.2",
+        "concat": "^1.0.3",
+        "cross-env": "^7.0.3",
+        "http-server": "14.1.1",
+        "jasmine-core": "3.10.1",
+        "jasmine-spec-reporter": "7.0.0",
+        "karma": "^6.3.9",
+        "karma-chrome-launcher": "3.1.1",
+        "karma-coverage": "^2.0.3",
+        "karma-coverage-istanbul-reporter": "3.0.3",
+        "karma-jasmine": "4.0.1",
+        "karma-jasmine-html-reporter": "1.7.0",
+        "karma-junit-reporter": "2.0.1",
+        "karma-mocha-reporter": "2.2.5",
+        "karma-notify-reporter": "1.3.0",
+        "mocha": "9.2.2",
+        "ng-packagr": "14.2.2",
+        "selenium-webdriver": "4.5.0",
+        "ts-node": "10.4.0",
+        "tslint": "6.1.3",
+        "typescript": "4.8.4",
         "webpack-bundle-analyzer": "^4.5.0"
-    }, 
-    "name": "openvidu-components-testapp", 
-    "private": true, 
+    },
+    "name": "openvidu-components-testapp",
+    "private": true,
     "scripts": {
-        "build": "ng build openvidu-components-testapp --configuration production", 
-        "bundle-report": "ng build openvidu-webcomponent --stats-json --configuration production && webpack-bundle-analyzer dist/openvidu-webcomponent/stats.json", 
-        "doc:build": "cd projects/openvidu-angular && npx compodoc -p ./doc/tsconfig.doc.json -c ./doc/.compodocrc.json", 
-        "doc:clean-copy": "rm -rf ../../openvidu.io-docs/docs/api/openvidu-angular && cp -r ./docs/openvidu-angular/ ../../openvidu.io-docs/docs/api/openvidu-angular", 
-        "doc:serve": "cd projects/openvidu-angular && npx compodoc -p ./doc/tsconfig.doc.json --watch --serve -c ./doc/.compodocrc.json", 
-        "lib:build": "ng build openvidu-angular --configuration production && cd ./dist/openvidu-angular && npm pack", 
-        "lib:copy": "cp dist/openvidu-angular/openvidu-angular-*.tgz ../../openvidu-tutorials/openvidu-call/openvidu-call-front", 
-        "lib:e2e": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/angular.test.js", 
-        "lib:e2e-ci": "cross-env LAUNCH_MODE=CI npm run lib:e2e", 
-        "lib:serve": "ng build openvidu-angular --watch", 
-        "lib:test": "ng test openvidu-angular --no-watch --code-coverage", 
-        "lint": "ng lint", 
-        "start": "ng serve --configuration development", 
-        "start-prod": "npx http-server ./dist/openvidu-components-testapp/ --port 4200", 
-        "start:ssl": "ng serve --ssl --configuration development --host 0.0.0.0 --port 4200 --ssl-cert /path/to/cert.pem --ssl-key /path/to/key.pem", 
-        "webcomponent:build": "./node_modules/@angular/cli/bin/ng.js build openvidu-webcomponent --configuration production && node ./openvidu-webcomponent-build.js", 
-        "webcomponent:e2e": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/webcomponent.test.js", 
-        "webcomponent:e2e-ci": "cross-env LAUNCH_MODE=CI npm run webcomponent:e2e", 
+        "build": "ng build openvidu-components-testapp --configuration production",
+        "bundle-report": "ng build openvidu-webcomponent --stats-json --configuration production && webpack-bundle-analyzer dist/openvidu-webcomponent/stats.json",
+        "doc:build": "npx compodoc -p ./projects/openvidu-angular/doc/tsconfig.doc.json -c ./projects/openvidu-angular/doc/.compodocrc.json",
+        "doc:clean-copy": "rm -rf ../../openvidu.io-docs/docs/api/openvidu-angular && cp -r ./docs/openvidu-angular/ ../../openvidu.io-docs/docs/api/openvidu-angular",
+        "doc:serve": "npx compodoc --watch --serve --includes ./projects/openvidu-angular/doc/extends  -c ./projects/openvidu-angular/doc/.compodocrc.json",
+        "lib:build": "ng build openvidu-angular --configuration production && cd ./dist/openvidu-angular && npm pack",
+        "lib:copy": "cp dist/openvidu-angular/openvidu-angular-*.tgz ../../openvidu-tutorials/openvidu-call/openvidu-call-front",
+        "lib:e2e": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/angular.test.js",
+        "lib:e2e-ci": "cross-env LAUNCH_MODE=CI npm run lib:e2e",
+        "lib:serve": "ng build openvidu-angular --watch",
+        "lib:test": "ng test openvidu-angular --no-watch --code-coverage",
+        "lint": "ng lint",
+        "start": "ng serve --configuration development",
+        "start-prod": "npx http-server ./dist/openvidu-components-testapp/ --port 4200",
+        "start:ssl": "ng serve --ssl --configuration development --host 0.0.0.0 --port 4200 --ssl-cert /path/to/cert.pem --ssl-key /path/to/key.pem",
+        "webcomponent:build": "./node_modules/@angular/cli/bin/ng.js build openvidu-webcomponent --configuration production && node ./openvidu-webcomponent-build.js",
+        "webcomponent:e2e": "tsc --project ./e2e && npx mocha --recursive --timeout 30000 ./e2e/dist/webcomponent.test.js",
+        "webcomponent:e2e-ci": "cross-env LAUNCH_MODE=CI npm run webcomponent:e2e",
         "webcomponent:serve-testapp": "npx http-server ./e2e/webcomponent-app/"
-    }, 
+    },
     "version": "2.24.0"
 }
