Update openvidu-test-e2e image to Ubuntu 22.04

--- a/.github/workflows/openvidu-ce-test.yml
+++ b/.github/workflows/openvidu-ce-test.yml
@@ -16,7 +16,7 @@ on:
       TEST_IMAGE:
         description: 'Docker image where to run the tests'
         required: true
-        default: 'openvidu/openvidu-test-e2e:focal'
+        default: 'openvidu/openvidu-test-e2e:22.04'
       KURENTO_MEDIA_SERVER_IMAGE:
         description: 'Docker image of kurento-media-server'
         required: true
@@ -53,7 +53,7 @@ jobs:
   main:
     runs-on: ubuntu-latest
     container:
-      image: ${{ github.event.inputs.TEST_IMAGE || 'openvidu/openvidu-test-e2e:focal' }}
+      image: ${{ github.event.inputs.TEST_IMAGE || 'openvidu/openvidu-test-e2e:22.04' }}
       volumes:
         - /var/run/docker.sock:/var/run/docker.sock
         - /opt/openvidu:/opt/openvidu
