--- a/openvidu-test-e2e/docker/Dockerfile
+++ b/openvidu-test-e2e/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:20.04
+FROM ubuntu:22.04
 
 LABEL maintainer="info@openvidu.io"
 
@@ -8,14 +8,17 @@ RUN apt-get update && apt-get -y upgrade
 
 RUN apt-get install -y \
     software-properties-common \ 
+    apt-transport-https \
+    rsync \
     ca-certificates \
     curl \
     gnupg \
-    lsb-release && \
+    lsb-release \
+    iproute2 && \
     apt-get install -y --no-install-recommends apt-utils
 
 # Install Node
-RUN curl -sL https://deb.nodesource.com/setup_16.x | bash - && apt-get install -y nodejs
+RUN curl -sL https://deb.nodesource.com/setup_18.x | bash - && apt-get install -y nodejs
 
 # Java 11
 RUN apt-get install -y openjdk-11-jdk-headless
@@ -36,15 +39,10 @@ RUN apt-get -y install sudo
 RUN apt-get install -y ffmpeg
 
 # docker
-RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg && \
-    echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu focal stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null && \
-    apt-get update && apt-get install -y docker-ce docker-ce-cli containerd.io
-
-# docker-compose
-RUN apt-get update && apt-get install docker-compose-plugin && \
-    curl -fL https://github.com/docker/compose-switch/releases/latest/download/docker-compose-linux-amd64 -o /usr/local/bin/compose-switch && \
-    chmod +x /usr/local/bin/compose-switch && \
-    update-alternatives --install /usr/local/bin/docker-compose docker-compose /usr/local/bin/compose-switch 99
+RUN sudo mkdir -p /etc/apt/keyrings && \
+    curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg && \
+    echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null && \
+    sudo apt-get update && sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-compose-plugin
 
 # Cleanup
 RUN rm -rf /var/lib/apt/lists/*
