--- a/openvidu-testapp/package.json
+++ b/openvidu-testapp/package.json
@@ -1,49 +1,50 @@
 {
-    "dependencies": {
-        "@angular/animations": "8.2.14", 
-        "@angular/cdk": "8.2.3", 
-        "@angular/common": "8.2.14", 
-        "@angular/compiler": "8.2.14", 
-        "@angular/core": "8.2.14", 
-        "@angular/flex-layout": "8.0.0-beta.27", 
-        "@angular/forms": "8.2.14", 
-        "@angular/http": "7.2.15", 
-        "@angular/material": "8.2.3", 
-        "@angular/platform-browser": "8.2.14", 
-        "@angular/platform-browser-dynamic": "8.2.14", 
-        "@angular/router": "8.2.14", 
-        "colormap": "2.3.1", 
-        "core-js": "3.4.7", 
-        "hammerjs": "2.0.8", 
-        "json-stringify-safe": "^5.0.1", 
-        "openvidu-browser": "2.24.0", 
-        "openvidu-node-client": "2.24.0", 
-        "rxjs": "6.5.3", 
-        "zone.js": "0.10.2"
-    }, 
-    "devDependencies": {
-        "@angular-devkit/build-angular": "0.803.20", 
-        "@angular/cli": "8.3.20", 
-        "@angular/compiler-cli": "8.2.14", 
-        "@angular/language-service": "8.2.14", 
-        "@types/jasmine": "3.5.0", 
-        "@types/jasminewd2": "2.0.8", 
-        "@types/node": "12.12.14", 
-        "codelyzer": "5.2.0", 
-        "ts-node": "8.5.4", 
-        "tslint": "5.20.1", 
-        "typescript": "3.5.3"
-    }, 
-    "license": "Apache-2.0", 
-    "name": "openvidu-testapp", 
-    "private": true, 
-    "scripts": {
-        "build": "NODE_OPTIONS=--openssl-legacy-provider ng build", 
-        "e2e": "ng e2e", 
-        "lint": "ng lint", 
-        "ng": "ng", 
-        "start": "NODE_OPTIONS=--openssl-legacy-provider ng serve --host 0.0.0.0 --ssl", 
-        "test": "NODE_OPTIONS=--openssl-legacy-provider ng test"
-    }, 
-    "version": "2.24.0"
+  "dependencies": {
+    "@angular/animations": "14.2.12",
+    "@angular/cdk": "14.2.7",
+    "@angular/common": "14.2.12",
+    "@angular/compiler": "14.2.12",
+    "@angular/core": "14.2.12",
+    "@angular/flex-layout": "14.0.0-beta.41",
+    "@angular/forms": "14.2.12",
+    "@angular/material": "14.2.7",
+    "@angular/platform-browser": "14.2.12",
+    "@angular/platform-browser-dynamic": "14.2.12",
+    "@angular/router": "14.2.12",
+    "colormap": "2.3.2",
+    "core-js": "3.26.1",
+    "json-stringify-safe": "^5.0.1",
+    "openvidu-browser": "2.24.0",
+    "openvidu-node-client": "2.24.0",
+    "rxjs": "7.5.7",
+    "tslib": "^2.4.1",
+    "zone.js": "0.12.0"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "14.2.10",
+    "@angular/cli": "14.2.10",
+    "@angular/compiler-cli": "14.2.12",
+    "@angular/language-service": "14.2.12",
+    "@types/jasmine": "4.3.0",
+    "@types/jasminewd2": "2.0.10",
+    "@types/json-stringify-safe": "^5.0.0",
+    "@types/node": "12.12.14",
+    "codelyzer": "6.0.2",
+    "ts-node": "8.5.4",
+    "tslint": "~6.1.3",
+    "typescript": "4.6.4"
+  },
+  "license": "Apache-2.0",
+  "name": "openvidu-testapp",
+  "private": true,
+  "scripts": {
+    "build": "ng build",
+    "e2e": "ng e2e",
+    "lint": "ng lint",
+    "ng": "ng",
+    "start:dev": "ng serve --open --configuration development",
+    "start": "ng serve --host 0.0.0.0 --ssl --configuration development",
+    "test": "ng test"
+  },
+  "version": "2.24.0"
 }
