--- a/openvidu-testapp/package.json
+++ b/openvidu-testapp/package.json
@@ -13,11 +13,11 @@
     "@angular/router": "14.2.12",
     "colormap": "2.3.2",
     "core-js": "3.26.1",
-    "json-stringify-safe": "^5.0.1",
+    "json-stringify-safe": "5.0.1",
     "openvidu-browser": "2.24.0",
     "openvidu-node-client": "2.24.0",
     "rxjs": "7.5.7",
-    "tslib": "^2.4.1",
+    "tslib": "2.4.1",
     "zone.js": "0.12.0"
   },
   "devDependencies": {
@@ -27,12 +27,12 @@
     "@angular/language-service": "14.2.12",
     "@types/jasmine": "4.3.0",
     "@types/jasminewd2": "2.0.10",
-    "@types/json-stringify-safe": "^5.0.0",
+    "@types/json-stringify-safe": "5.0.0",
     "@types/node": "12.12.14",
     "codelyzer": "6.0.2",
     "ts-node": "8.5.4",
-    "tslint": "~6.1.3",
-    "typescript": "4.6.4"
+    "tslint": "6.1.3",
+    "typescript": "4.8.4"
   },
   "license": "Apache-2.0",
   "name": "openvidu-testapp",
