openvidu-angular: Fixed webcomponents e2e test

--- a/.github/workflows/openvidu-components-angular-E2E.yml
+++ b/.github/workflows/openvidu-components-angular-E2E.yml
@@ -80,7 +80,7 @@ jobs:
 
   webcomponent_e2e:
     needs: test_setup
-    name: Webcomponent E2E tests
+    name: Webcomponent E2E CE tests
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
