Update Spring Boot to 2.7.5

--- a/openvidu-client/pom.xml
+++ b/openvidu-client/pom.xml
@@ -60,9 +60,15 @@
 			<version>${version.kurento}</version>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
 			<version>${version.junit}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
+			<version>${version.hamcrest}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
