--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -316,13 +316,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-core</artifactId>
-			<version>${version.hamcrest}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-library</artifactId>
+			<artifactId>hamcrest</artifactId>
 			<version>${version.hamcrest}</version>
 			<scope>test</scope>
 		</dependency>
