--- a/openvidu-test-browsers/src/main/resources/aplication-pro-webhook.properties
+++ b/openvidu-test-browsers/src/main/resources/aplication-pro-webhook.properties
@@ -1,3 +1,4 @@
 server.port=7777
 server.ssl.enabled=false
 management.metrics.export.elastic.enabled=false
+spring.main.allow-circular-references=true
