Fix integration tests updating properties file

--- a/openvidu-server/src/test/resources/integration-test.properties
+++ b/openvidu-server/src/test/resources/integration-test.properties
@@ -7,6 +7,7 @@ server.ssl.key-alias=openvidu-selfsigned
 
 logging.level.root=info
 spring.main.allow-bean-definition-overriding=true
+spring.main.allow-circular-references=true
 
 KMS_URIS=["ws://localhost:8888/kurento"]
 
