--- a/openvidu-test-e2e/pom.xml
+++ b/openvidu-test-e2e/pom.xml
@@ -133,7 +133,7 @@
 		<dependency>
 			<groupId>info.debatty</groupId>
 			<artifactId>java-string-similarity</artifactId>
-			<version>2.0.0</version>
+			<version>${version.stringsimilarity}</version>
 		</dependency>
 	</dependencies>
 
