--- a/pom.xml
+++ b/pom.xml
@@ -59,8 +59,9 @@
 		<version.slf4j>1.7.36</version.slf4j>
 		<version.gson>2.10</version.gson>
 		<version.jcodec>0.2.5</version.jcodec>
-		<version.testcontainers>1.16.2</version.testcontainers>
+		<version.testcontainers>1.17.6</version.testcontainers>
 		<version.appium>7.6.0</version.appium>
+		<version.stringsimilarity>2.0.0</version.stringsimilarity>
 
 		<version.webdrivermanager>4.2.2</version.webdrivermanager>
 
