--- a/openvidu-test-e2e/pom.xml
+++ b/openvidu-test-e2e/pom.xml
@@ -75,7 +75,7 @@
 		<dependency>
 			<groupId>io.github.bonigarcia</groupId>
 			<artifactId>webdrivermanager</artifactId>
-			<version>${version.webdrivermanager}</version>
+			<version>5.3.1</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.slf4j</groupId>
