--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
 		<version.appium>7.6.0</version.appium>
 		<version.stringsimilarity>2.0.0</version.stringsimilarity>
 
+		<version.compiler.plugin>3.10.1</version.compiler.plugin>
 		<version.enforcer.plugin>3.1.0</version.enforcer.plugin>
 		<version.extra.enforcer.rules.plugin>1.6.1</version.extra.enforcer.rules.plugin>
 		<version.source.plugin>3.2.1</version.source.plugin>
@@ -72,9 +73,6 @@
 		<version.exec.plugin>3.1.0</version.exec.plugin>
 		<version.javadoc.plugin>3.4.1</version.javadoc.plugin>
 		<version.maven.artifact>3.8.6</version.maven.artifact>
-
-		<maven.compiler.target>11</maven.compiler.target>
-		<maven.compiler.source>11</maven.compiler.source>
 
 		<openvidu.scm.url>https://github.com/OpenVidu/openvidu</openvidu.scm.url>
 		<openvidu.scm.connection>git@github.com:OpenVidu/openvidu.git</openvidu.scm.connection>
@@ -89,20 +87,14 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<!-- maven-compiler-plugin -->
-		<maven.compiler.target>11</maven.compiler.target>
-		<maven.compiler.source>11</maven.compiler.source>
+		<java.version>11</java.version>
 
-		<!-- Options to override the compiler arguments directly on the compiler 
-			arument line to separate between what the IDE understands as the source level 
-			and what the Maven compiler actually use. -->
-		<maven.compiler.argument.target>${maven.compiler.target}</maven.compiler.argument.target>
-		<maven.compiler.argument.source>${maven.compiler.source}</maven.compiler.argument.source>
+		<!-- maven-compiler-plugin -->
+		<maven.compiler.release>${java.version}</maven.compiler.release>
 
 		<!-- maven-enforcer-plugin -->
 		<maven.min.version>3.0.3</maven.min.version>
-		<jdk.min.version>${maven.compiler.source}</jdk.min.version>
-		<jdk.max.version>${maven.compiler.source}</jdk.max.version>
+
 	</properties>
 
 	<distributionManagement>
@@ -118,6 +110,13 @@
 
 	<build>
 		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${version.compiler.plugin}</version>
+			</plugin>
+
 			<plugin>
 
 				<!-- Check for the minimum version of Java and Maven. Runs during the 
@@ -134,9 +133,9 @@
 						<configuration>
 							<rules>
 								<requireJavaVersion>
-									<message>To build this project JDK ${jdk.min.version} (or
-										greater) is required. Please install it.</message>
-									<version>${jdk.min.version}</version>
+									<message>To build this project JDK ${java.version} (or greater)
+										is required. Please install it.</message>
+									<version>${java.version}</version>
 								</requireJavaVersion>
 							</rules>
 						</configuration>
@@ -164,7 +163,7 @@
 						<configuration>
 							<rules>
 								<enforceBytecodeVersion>
-									<maxJdkVersion>${jdk.max.version}</maxJdkVersion>
+									<maxJdkVersion>${java.version}</maxJdkVersion>
 								</enforceBytecodeVersion>
 							</rules>
 							<fail>true</fail>
