OpenVidu Server Dashborad update to Angular 15

--- a/openvidu-server/src/dashboard/package.json
+++ b/openvidu-server/src/dashboard/package.json
@@ -1,40 +1,39 @@
 {
   "dependencies": {
-    "@angular/animations": "14.2.12",
-    "@angular/cdk": "14.2.7",
-    "@angular/common": "14.2.12",
-    "@angular/compiler": "14.2.12",
-    "@angular/core": "14.2.12",
-    "@angular/flex-layout": "14.0.0-beta.41",
-    "@angular/forms": "14.2.12",
-    "@angular/material": "14.2.7",
-    "@angular/platform-browser": "14.2.12",
-    "@angular/platform-browser-dynamic": "14.2.12",
-    "@angular/router": "14.2.12",
-    "core-js": "3.21.1",
-    "jquery": "3.6.0",
+    "@angular/animations": "15.0.2",
+    "@angular/cdk": "15.0.1",
+    "@angular/common": "15.0.2",
+    "@angular/compiler": "15.0.2",
+    "@angular/core": "15.0.2",
+    "@angular/forms": "15.0.2",
+    "@angular/material": "15.0.1",
+    "@angular/platform-browser": "15.0.2",
+    "@angular/platform-browser-dynamic": "15.0.2",
+    "@angular/router": "15.0.2",
+    "core-js": "3.26.1",
+    "jquery": "3.6.1",
     "openvidu-browser": "2.24.0",
-    "rxjs": "7.5.5",
-    "tslib": "2.3.1",
-    "zone.js": "0.11.5"
+    "rxjs": "7.5.7",
+    "tslib": "2.4.1",
+    "zone.js": "0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.2.10",
-    "@angular/cli": "14.2.10",
-    "@angular/compiler-cli": "14.2.12",
-    "@angular/language-service": "14.2.12",
-    "@types/jasmine": "3.6.6",
-    "@types/node": "17.0.21",
+    "@angular-devkit/build-angular": "15.0.2",
+    "@angular/cli": "15.0.2",
+    "@angular/compiler-cli": "15.0.2",
+    "@angular/language-service": "15.0.2",
+    "@types/jasmine": "4.3.0",
+    "@types/node": "18.11.10",
     "codelyzer": "6.0.2",
-    "jasmine-core": "4.0.1",
+    "jasmine-core": "4.5.0",
     "jasmine-spec-reporter": "7.0.0",
-    "karma": "6.3.17",
+    "karma": "6.4.1",
     "karma-chrome-launcher": "3.1.1",
     "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "4.0.1",
-    "karma-jasmine-html-reporter": "1.7.0",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "2.0.0",
     "protractor": "7.0.0",
-    "ts-node": "10.7.0",
+    "ts-node": "10.9.1",
     "tslint": "6.1.3",
     "typescript": "4.8.4"
   },
@@ -48,7 +47,7 @@
     "lint": "ng lint",
     "ng": "ng",
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
-    "start": "ng serve",
+    "start": "ng serve --host 0.0.0.0 --ssl",
     "test": "ng test"
   },
   "version": "0.0.0"
