--- a/openvidu-server/src/dashboard/tsconfig.json
+++ b/openvidu-server/src/dashboard/tsconfig.json
@@ -8,13 +8,14 @@
     "declaration": false,
     "moduleResolution": "node",
     "experimentalDecorators": true,
-    "target": "es2020",
+    "target": "ES2022",
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
       "es2016",
       "dom"
-    ]
+    ],
+    "useDefineForClassFields": false
   }
 }
