deployment: Add OPENVIDU_PRO_DOCKER_REGISTRIES for private docker repositories usage in media nodes

--- a/openvidu-server/deployments/pro/docker-compose/mono-node/.env
+++ b/openvidu-server/deployments/pro/docker-compose/mono-node/.env
@@ -327,3 +327,12 @@ ELASTICSEARCH_PASSWORD=
 # the verbosity level of the logs of KMS
 # Documentation: https://doc-kurento.readthedocs.io/en/stable/features/logging.html
 # KMS_DOCKER_ENV_GST_DEBUG=
+
+# Private Docker registries for custom images
+# --------------------------
+# By default OpenVidu PRO/Enterprise uses the public Docker Hub registry to pull the images,
+# but if you want to use a private registry, you can define your own repository and credentials
+# in this environment variable.
+# You can define as many registries as you want, each repository must be separated by a comma.
+# The format of the variable is: OPENVIDU_PRO_DOCKER_REGISTRIES=["serveraddress=yourserver.com,username=user,password=pass"]
+# OPENVIDU_PRO_DOCKER_REGISTRIES=
