--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -384,6 +384,15 @@ ELASTICSEARCH_PASSWORD=
 #    - https://docs.openvidu.io/en/stable/deployment/pro/on-premises/#coturn-configuration
 OPENVIDU_PRO_COTURN_IN_MEDIA_NODES=false
 
+# Private Docker registries for custom images
+# --------------------------
+# By default OpenVidu PRO/Enterprise uses the public Docker Hub registry to pull the images,
+# but if you want to use a private registry, you can define your own repository and credentials
+# in this environment variable.
+# You can define as many registries as you want, each repository must be separated by a comma.
+# The format of the variable is: OPENVIDU_PRO_DOCKER_REGISTRIES=["serveraddress=yourserver.com,username=user,password=pass"]
+# OPENVIDU_PRO_DOCKER_REGISTRIES=
+
 # Cloudformation configuration
 # --------------------------
 # If you're working outside AWS ignore this section
