deployment: Update OPENVIDU_PRO_AWS parameters .env description

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -196,19 +196,28 @@ OPENVIDU_PRO_CLUSTER_LOAD_STRATEGY=streams
 # This property is only taken into account if OPENVIDU_PRO_RECORDING_STORAGE=s3
 #OPENVIDU_PRO_AWS_S3_HEADERS=
 
-# If you're instance has a role which has access to read
-# and write into the s3 bucket, you don't need this parameter
+# This property applies to OPENVIDU_PRO_RECORDING_STORAGE=s3 and/or OPENVIDU_PRO_SPEECH_TO_TEXT=aws.
+# It is the AWS long-lived credentials access key. Depending on the service you have enabled:
+#   - OPENVIDU_PRO_RECORDING_STORAGE=s3: Must have read and write permissions over the bucket defined in property
+#       OPENVIDU_PRO_AWS_S3_BUCKET. In this case credentials are optional:
+#       if not provided the internal S3 client will try to use the default AWS credentials of the Master Node, if available
+#   - OPENVIDU_PRO_SPEECH_TO_TEXT=aws: Must have permissions to manage Amazon Transcribe services.
+#       In this case credentials are mandatory.
 # OPENVIDU_PRO_AWS_ACCESS_KEY=
 
-# AWS credentials secret key from OPENVIDU_PRO_AWS_ACCESS_KEY. This property is only
-# taken into account if OPENVIDU_PRO_RECORDING_STORAGE=s3
-# If you're instance has a role which has access to read
-# and write into the s3 bucket, you don't need this parameter
+# This property applies to OPENVIDU_PRO_RECORDING_STORAGE=s3 and/or OPENVIDU_PRO_SPEECH_TO_TEXT=aws.
+# It is the AWS long-lived credentials secret key. Depending on the service you have enabled:
+#   - OPENVIDU_PRO_RECORDING_STORAGE=s3: In this case credentials are optional: if not provided then the internal
+#       S3 client will try to use the default AWS credentials of the machine, if available.
+#   - OPENVIDU_PRO_SPEECH_TO_TEXT=aws: In this case credentials are mandatory.
 # OPENVIDU_PRO_AWS_SECRET_KEY=
 
-# AWS region in which the S3 bucket is located (e.g. eu-west-1). If not provided,
-# the region will try to be discovered automatically, although this is not always possible.
-# This property is only taken into account if OPENVIDU_PRO_RECORDING_STORAGE=s3
+
+# This property applies to OPENVIDU_PRO_RECORDING_STORAGE=s3 and/or OPENVIDU_PRO_SPEECH_TO_TEXT=aws.
+# It is the AWS region hosting the services. Depending on the service you have enabled:
+#   - OPENVIDU_PRO_RECORDING_STORAGE=s3: AWS region in which the S3 bucket is located (e.g. "eu-west-1").
+#       If not provided, the region will try to be discovered automatically, although this is not always possible.
+#   - OPENVIDU_PRO_SPEECH_TO_TEXT=aws: AWS region where Amazon Transcribe will operate. In this case the property is always mandatory.
 #OPENVIDU_PRO_AWS_REGION=
 
 # Whether to enable recording module or not
