--- a/.github/workflows/openvidu-ce-test.yml
+++ b/.github/workflows/openvidu-ce-test.yml
@@ -71,18 +71,20 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setting up CI
         run: ci-scripts/commons.sh --prepare
+      - name: Prepare Kurento Snapshots
+        run: ci-scripts/commons.sh --prepare-kurento-snapshot
       - name: OpenVidu Browser build
-        run: ci-scripts/openvidu-e2e-tests.sh --build-openvidu-browser
+        run: ci-scripts/commons.sh --build-openvidu-browser
       - name: OpenVidu Node Client build
-        run: ci-scripts/openvidu-e2e-tests.sh --build-openvidu-node-client
+        run: ci-scripts/commons.sh --build-openvidu-node-client
       - name: OpenVidu Java Client build
-        run: ci-scripts/openvidu-e2e-tests.sh --build-openvidu-java-client
+        run: ci-scripts/commons.sh --build-openvidu-java-client
+      - name: OpenVidu Server pre-build
+        run: ci-scripts/commons.sh --build-openvidu-parent
       - name: OpenVidu TestApp build
-        run: ci-scripts/openvidu-e2e-tests.sh --build-openvidu-testapp
+        run: ci-scripts/commons.sh --build-openvidu-testapp
       - name: OpenVidu Server dashboard build
         run: ci-scripts/openvidu-e2e-tests.sh --build-dashboard
-      - name: OpenVidu Server pre-build
-        run: ci-scripts/openvidu-e2e-tests.sh --openvidu-server-pre-build
       - name: OpenVidu Server unit tests
         run: ci-scripts/openvidu-e2e-tests.sh --openvidu-server-unit-tests
       - name: OpenVidu Server integration tests
