--- a/openvidu-test-e2e/docker/openvidu-test-e2e-android/Dockerfile
+++ b/openvidu-test-e2e/docker/openvidu-test-e2e-android/Dockerfile
@@ -13,6 +13,9 @@ RUN mkdir /usr/lib/android-sdk && cd /usr/lib/android-sdk && \
 # Install Android SDK using sdkmanager
 RUN yes | /usr/lib/android-sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-33"
 
+# Export ANROID_HOME env variable
+ENV ANDROID_HOME /usr/lib/android-sdk
+
 # Cleanup
 RUN rm -rf /var/lib/apt/lists/*
 RUN apt-get autoremove --purge -y && apt-get autoclean
