--- a/.github/workflows/openvidu-ce-test.yml
+++ b/.github/workflows/openvidu-ce-test.yml
@@ -70,7 +70,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Setting up CI
-        run: ci-scripts/commons.sh --prepare
+        run: ci-scripts/commons.sh --prepare openvidu/openvidu-test-e2e
       - name: Prepare Kurento Snapshots
         run: ci-scripts/commons.sh --prepare-kurento-snapshot
       - name: OpenVidu Browser build
