--- a/.github/workflows/openvidu-components-angular-E2E.yml
+++ b/.github/workflows/openvidu-components-angular-E2E.yml
@@ -4,12 +4,12 @@ on:
     paths:
       - 'openvidu-components-angular/**'
       - 'openvidu-browser/**'
+      - 'openvidu-node-client/**'
       - '.github/workflows/openvidu-components-angular-E2E.yml'
   pull_request:
     branches:
       - master
   workflow_dispatch:
-
 
 jobs:
 
